# qaaaas

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: backend-python.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: ping.py
backend/app/domain/steps/: base.py
backend/app/domain/steps/compound/: simple.py
backend/app/domain/steps/request/: simple.py
backend/tests/backend/: conftest.py
backend/tests/backend/api/routes/: test_ping.py
backend/tests/backend/domain/compound/: test_simple.py
backend/tests/backend/domain/request/: test_simple.py
