[tool.poetry]
name = "qaaaas"
version = "0.1.0"
description = "Quality Assurance Automation as a Service"
authors = ["Ján Popeláš <jan@popelas.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.3.2"
requests-mock = "^1.12.1"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testspath = "tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
